# Coding_Quiz

./: .env.example  .gitattributes  .gitignore  API_STYLE.md  Advanced_PRD.md  CODING_QUIZ_FCM_TEST.md  Dockerfile  FCM_CONSOLE_SETUP.md  FCM_TEST_CODE_OVERVIEW.md  FCM_TEST_FLOW_PRESENTATION.md  NOTIFICATION_BE_MEETING_NOTES.md  NOTIFICATION_PROJECT_INTEGRATION_GUIDE.md  PRD.md  PRD_Analyzed.md  README.md  README_PRD.md  Universal_PRD.md  Universal_PRD_Final.md  Universal_PRD_Fixed.md  advanced_prd_generator.py  ai_prd_generator.py  alembic_models.py  generate_prd.py  main.py  prd_generator.py  prd_template.md  pyproject.toml  requirements_ai.txt  universal_prd_generator.py  update_table.py
app/core/: __init__.py  config.py  csv_listener.py  database.py  schemas.py  security.py  ulid.py
app/models/: __init__.py  quiz.py  score.py  user.py
app/modules/: __init__.py
app/modules/auth/: repository.py  router.py  schemas.py  service.py
app/modules/notification_test/: __init__.py  router.py  schemas.py  service.py
app/modules/quiz/: grading.py  repository.py  router.py  schemas.py  service.py
app/modules/ranking/: repository.py  router.py  schemas.py  (+1 more)
app/repositories/: quiz_repository.py  ranking_repository.py  user_repository.py
app/routes/: auth.py  ranking.py
app/services/: auth_service.py  ranking_service.py
backend/: API_STYLE.md  Dockerfile  main.py  quiz_app.db  requirements.txt
backend/app/: __init__.py  csv_listener.py  database.py
backend/csv_files/: quiz_data.csv
csv_files/: quiz_data.csv
docs/: CODING_QUIZ_FCM_TEST.md  FCM_CONSOLE_SETUP.md  FCM_TEST_CODE_OVERVIEW.md  NOTIFICATION_BE_MEETING_NOTES.md  NOTIFICATION_PROJECT_INTEGRATION_GUIDE.md
frontend/: .env  .env.example  eslint.config.mjs  package-lock.json  package.json
frontend/api/: auth.js  notificationTest.js  quiz.js  ranking.js
frontend/app/: globals.css  layout.js  layout.module.css  page.js  page.module.css  providers.js
frontend/components/: categorySelector.js  categorySelector.module.css  navbar.js  navbar.module.css  quizcard.js  quizcard.module.css
frontend/context/: AlertContext.js
frontend/public/: firebase-messaging-sw.js
frontend/utils/: answerMatcher.js
migrations/: env.py
migrations/versions/: 66c1c2f32a88_init.py
scripts/: fix_and_extend_quiz_data_csv.py
tests/: test_notification_test_api.py
(+34 files in other folders)
