[project]
name = "coding-quiz"
version = "0.1.0"
description = ""
authors = [
    {name = "JAEHO AHN",email = "ajh4234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard] (>=0.40.0,<0.41.0)",
  "sqlalchemy",
  "pydantic",
  "python-dotenv",
  "watchdog",
  "passlib[bcrypt]",
  "pyjwt[crypto]"
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
ai = ["langchain", "openai"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[tool.ruff]
line-length = 120


